--- a/index.css
+++ b/index.css
@@ -30,12 +30,13 @@ ul, li {
   display: flex;
   padding: 0;
   color: black;
+  text-align: left;
 }
 .enlaces {
-  display: flex;
-  text-align: center;
+  display: inline-flex;
+  text-align: left;
   list-style: none;
-  margin: 35px;
+  margin: 130px 0px 60px 0;
 }
 body {
   margin: 0px;
