--- a/AA2.css
+++ b/AA2.css
@@ -16,6 +16,9 @@ html {
     background-color: rgba(0, 0, 0, 0.75);
     box-shadow: 0 0 4px 2px #6F8033;
 }
+.logo {
+    margin-right: 100px;
+}
 
 .nav {
     padding-top: 16px;
@@ -29,18 +32,28 @@ html {
 }
 
 a.usuario {
-    background-color: aqua;
-    font-size: 15px;
-    color: black;
+    all: unset;
     padding: 0.25em 1em;
     border-radius: 1rem;
-    text-decoration: none;
+    background-color: #2BF6FF;
+        cursor: pointer;
+        transition: background-color 0.25s;
+        color: black;
+    
+        &:hover {
+            background-color: #19ade3;
+    
+        }
 }
 
+.buscador {
+    padding-left: 0%;
+
+}
 .container {
-    max-width: 1024px;
-    padding-right: 16px;
-    padding-left: 16px;
+    max-width: 1150px;
+        padding-right: 0px;
+        padding-left: 0px;
     margin: 0 auto;
 }
 
@@ -57,7 +70,7 @@ a.usuario {
     transition: color 0.25s;
 
     &:hover {
-        color: #23b5d8;
+        color: #2BF6FF;
     }
 }
 
@@ -73,21 +86,30 @@ a.usuario {
     height: 100%;
 }
 
+img.img2 {
+    border-radius: 40%;
+}
+
+p.descripcion {
+    font-size: 15px;
+}
 .button {
     all: unset;
     padding: 0.25em 1em;
     border-radius: 1rem;
-    background-color: #23b5d8;
+    background-color: #2BF6FF;
     cursor: pointer;
     transition: background-color 0.25s;
+    color: black;
 
     &:hover {
-        background-color: #1bd170;
+        background-color: #CFFF00;
     }
 }
 
 .flexbox {
     display: flex;
+    /* gap: 100; */
 }
 
 .flexbox--centered-sides {
@@ -122,7 +144,7 @@ h1 {
 }
 
 .carrito {
-    background-color: aqua;
+    background-color: #CFFF00;
     margin-right: 300px;
     font-size: 45px;
     color: black;
@@ -142,9 +164,42 @@ h3 {
 }
 
 
+
 .titulo-seccion {
     font-size: 24px;
     margin-top: 20px;
+    border-radius: 1rem;
+    }
+    
+    /* resaltados de seccion de productos 1 pagina  */
+    .top-dia {
+        background-color: #09c27b;
+        color: black;
+        margin-right: 1059px;
+    }
+    
+    .abarrotes {
+        background-color: #09c27b;
+        color: black;
+        margin-right: 1100px;
+    }
+    
+    .Bebidas {
+        background-color: #09c27b;
+        color: black;
+        margin-right: 1130px;
+    }
+    
+    .cuidado-personal {
+        background-color: #09c27b;
+        color: black;
+        margin-right: 859px;
+    }
+    
+    .frescos {
+        background-color: #09c27b;
+        color: black;
+        margin-right: 1130px;
 }
 
 /* Estilos para las secciones de productos */
@@ -160,7 +215,8 @@ h3 {
     flex: 0 1 calc(25% - 20px);
     margin: 10px;
     text-align: center;
-    font-size: 15px;
+    font-size: 18px;
+        color: rgb(244, 241, 241);
 }
 
 /* Estilos para las imágenes de productos en línea */
@@ -169,6 +225,7 @@ h3 {
     height: auto;
     display: inline-block;
     margin: 10px;
+    border-radius: 40%;
 }
 footer {
     align-items: center;
@@ -225,6 +282,7 @@ li {
 
 .bi-at {
     color: aliceblue;
+    font-size: 25px;
 }
 
 .bi-messenger {
