--- a/pag2.css
+++ b/pag2.css
@@ -16,6 +16,7 @@ html {
     background-color: rgba(0, 0, 0, 0.75);
     box-shadow: 0 0 4px 2px #6F8033;
 }
+
 .logo {
     margin-right: 100px;
 }
@@ -36,24 +37,25 @@ a.usuario {
     padding: 0.25em 1em;
     border-radius: 1rem;
     background-color: #2BF6FF;
-        cursor: pointer;
-        transition: background-color 0.25s;
-        color: black;
-    
-        &:hover {
-            background-color: #19ade3;
-    
-        }
+    cursor: pointer;
+    transition: background-color 0.25s;
+    color: black;
+
+    &:hover {
+        background-color: #19ade3;
+
+    }
 }
 
 .buscador {
     padding-left: 0%;
 
 }
+
 .container {
     max-width: 1150px;
-        padding-right: 0px;
-        padding-left: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
     margin: 0 auto;
 }
 
@@ -92,7 +94,9 @@ img.img2 {
 
 p.descripcion {
     font-size: 15px;
+    color: #1a1a18;
 }
+
 .button {
     all: unset;
     padding: 0.25em 1em;
@@ -140,7 +144,7 @@ p.descripcion {
 
 h1 {
     color: aqua;
-        font-size: 40px;
+    font-size: 40px;
 }
 
 .carrito {
@@ -152,6 +156,7 @@ h1 {
     border-radius: 1rem;
     text-decoration: none;
 }
+
 h3 {
     font-size: 30px;
     text-align: left;
@@ -169,37 +174,37 @@ h3 {
     font-size: 24px;
     margin-top: 20px;
     border-radius: 1rem;
-    }
-    
-    /* resaltados de seccion de productos 1 pagina  */
-    .top-dia {
-        background-color: #09c27b;
-        color: black;
-        margin-right: 1059px;
-    }
-    
-    .abarrotes {
-        background-color: #09c27b;
-        color: black;
-        margin-right: 1100px;
-    }
-    
-    .Bebidas {
-        background-color: #09c27b;
-        color: black;
-        margin-right: 1130px;
-    }
-    
-    .cuidado-personal {
-        background-color: #09c27b;
-        color: black;
-        margin-right: 859px;
-    }
-    
-    .frescos {
-        background-color: #09c27b;
-        color: black;
-        margin-right: 1130px;
+}
+
+/* resaltados de seccion de productos 1 pagina  */
+.top-dia {
+    background-color: #09c27b;
+    color: black;
+    margin-right: 1059px;
+}
+
+.abarrotes {
+    background-color: #09c27b;
+    color: black;
+    margin-right: 1100px;
+}
+
+.Bebidas {
+    background-color: #09c27b;
+    color: black;
+    margin-right: 1130px;
+}
+
+.cuidado-personal {
+    background-color: #09c27b;
+    color: black;
+    margin-right: 859px;
+}
+
+.frescos {
+    background-color: #09c27b;
+    color: black;
+    margin-right: 1130px;
 }
 
 /* Estilos para las secciones de productos */
@@ -216,7 +221,7 @@ h3 {
     margin: 10px;
     text-align: center;
     font-size: 18px;
-        color: rgb(7, 7, 7);
+    color: rgb(7, 7, 7);
 }
 
 /* Estilos para las imágenes de productos en línea */
@@ -227,6 +232,7 @@ h3 {
     margin: 10px;
     border-radius: 40%;
 }
+
 footer {
     align-items: center;
     display: flex;
