Se agrego la lista del header ,tambien las secciones  y el footer a js de la pag AA2

--- a/css/AA2.css
+++ b/css/AA2.css
@@ -242,7 +242,7 @@ h3 {
 /* Estilos para las imágenes de productos en línea */
 .imagen-producto {
     max-width: 200px;
-    height: auto;
+    height: 200px;
     display: inline-block;
     margin: 10px;
     border-radius: 40%;
