--- a/usuario/style.css
+++ b/usuario/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    background: linear-gradient(to right, rgb(35, 203, 203), #3498db , #2BF6FF);
+    background: linear-gradient(to right, rgb(35, 203, 203), rgb(17, 13, 145) , #2BF6FF);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,8 +26,8 @@ body {
 }
 
 .perfil img {
-    width: 110px;
-    height: 120px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     margin-bottom: 10px;
 }
