--- a/css/index.css
+++ b/css/index.css
@@ -260,6 +260,12 @@ h3 {
     text-overflow: ellipsis; /* Agregar puntos suspensivos si el texto se recorta */
     white-space: nowrap; /* Evitar el salto de línea */
 }
+.banner {
+    max-width: 1250px;
+    height: 400px;
+    margin-left: 300px;
+    margin-right: 300px;
+}
 
 footer {
     align-items: center;
