--- a/login/styles.css
+++ b/login/styles.css
@@ -10,7 +10,9 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: linear-gradient(to right, rgb(35, 203, 203), #171616);
+    background-image: url('https://www.10wallpaper.com/wallpaper/1366x768/1207/color_background-Abstract_design_wallpaper_1366x768.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 form {
